2013-04-15  Joey Ye  <joey.ye@arm.com>

	* config/arm/arm.c (thumb_far_jump_used_p): Fix typo in comments.

2013-04-15  Joey Ye  <joey.ye@arm.com>

	* config/arm/arm.c (thumb1_final_prescan_insn): Assert lr save
	for real far jump.
	(thumb_far_jump_used_p): Count instruction size and set
	far_jump_used.

2013-04-14  Eric Botcazou  <ebotcazou@adacore.com>

	* reorg.c (fill_simple_delay_slots): Reindent block of code.
	* resource.c (mark_target_live_regs): Reformat conditional block.

2013-04-13  Steven Bosscher  <steven@gcc.gnu.org>

	* sched-deps.c (deps_analyze_insn): Do not check for EH_REGION insn
	notes, they are emitted only just before final.
	* sched-int.h: Include insn-attr.h before checking INSN_SCHEDULING.

2013-04-13  Steven Bosscher  <steven@gcc.gnu.org>

	* emit-rtl.c (remove_insn): Do not call df_insn_delete here.
	* cfgrtl.c (delete_insn): Call it here instead.
	* lra-spills.c (lra_final_code_change): Use delete_insn.
	* haifa-sched.c (sched_remove_insn): Likewise.
	* sel-sched-ir.c (return_nop_to_pool): Clear INSN_DELETED_P for nops
	returning to the nop pool.
	(sel_remove_insn): Simplify the only_disconnect case via remove_insn,
	use delete_insn for definitive removal.  Clear BLOCK_FOR_INSN.

2013-04-12  Steven Bosscher  <steven@gcc.gnu.org>

	* doc/tm.texi.in (LOOP_ALIGN): Remove loop note references.
	* doc/tm.texi: Regenerated.

2013-04-12  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (ix86_hard_regno_mode_ok): Use ANY_QI_REGNO_P in
	QImode checks.

2013-04-12  Steven Bosscher  <steven@gcc.gnu.org>

	* df-core.c (df_find_def): Compare register numbers.
	(df_find_use): Likewise.

2013-04-12  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/56903
	* config/i386/i386.c (ix86_hard_regno_mode_ok): Add
	lra_in_progress for return.

2013-04-12  Greta Yorsh  <Greta.Yorsh@arm.com>

	* config/arm/arm.md (mov_scc,mov_negscc,mov_notscc): Convert
	define_insn into define_insn_and_split and emit movsicc patterns.
